   "create", "prune", "compact", "check". If you'd like to retain the old ordering ("prune" and
   "compact" first), then specify actions explicitly on the command-line.
 * #304: Run any command-line actions in the order specified instead of using a fixed ordering.
 * #628: Add a Healthchecks "log" state to send borgmatic logs to Healthchecks without signalling
   success or failure.

1.7.8
 * #620: With the "create" action and the "--list" ("--files") flag, only show excluded files at
   verbosity 2.
 * #621: Add optional authentication to the ntfy monitoring hook.
 * With the "create" action, only one of "--list" ("--files") and "--progress" flags can be used.
   This lines up with the new behavior in Borg 2.0.0b5.
 * Internally support new Borg 2.0.0b5 "--filter" status characters / item flags for the "create"
   action.
 * Fix the "create" action with the "--dry-run" flag querying for databases when a PostgreSQL/MySQL
   "all" database is configured. Now, these queries are skipped due to the dry run.
 * Add "--repository" flag to the "rcreate" action to optionally select one configured repository to
   create.
 * Add "--progress" flag to the "transfer" action, new in Borg 2.0.0b5.
 * Add "checkpoint_volume" configuration option to creates checkpoints every specified number of
   bytes during a long-running backup, new in Borg 2.0.0b5.

1.7.7
 * #642: Add MySQL database hook "add_drop_database" configuration option to control whether dumped
   MySQL databases get dropped right before restore.
 * #643: Fix for potential data loss (data not getting backed up) when dumping large "directory"
   format PostgreSQL/MongoDB databases. Prior to the fix, these dumps would not finish writing to
   disk before Borg consumed them. Now, the dumping process completes before Borg starts. This only
   applies to "directory" format databases; other formats still stream to Borg without using
   temporary disk space.